--- a/app/views/makes/_form.html.erb
+++ b/app/views/makes/_form.html.erb
@@ -1,25 +1,8 @@
-<%= form_for(@make) do |f| %>
-  <% if @make.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@make.errors.count, "error") %> prohibited this make from being saved:</h2>
+<%= simple_form_for @make do |f| %>
 
-      <ul>
-      <% @make.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= f.input :name %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :logo %><br>
-    <%= f.text_field :logo %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= f.input :logo %>
+
+  <%= f.button :submit %>
 <% end %>
